@@ -3,6 +3,8 @@ Release Notes
 * 8/8/2017
   * improved setMerge to try local if remote is unavailable
   * fixed ppE to keep job status when old job is closed in jobsDefined/Waiting
+  * improved ppE to take unifiedPQ into account
+  * fixed ppE to set resource_type to merge
 
 * 7/26/2017
   * setting cancelled/failed to es_killed/es_aborted
